--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 		</div>
 
 		<div class="row infos">
+			<h1>Le jeu du clicker</h1>
 			<div class="col-md-12">
+				
+			</br>
 				<h2>Let's click!</h2>
 				<form action="">
 					<input type="text" name="pseudo" placeholder="Rentrez votre pseudo" id="pseudo"><br />
